--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <p>Add cachex to your list of dependencies in <code>mix.exs</code>:</p>
 
 <div class="highlight highlight-source-elixir"><pre><span class="pl-k">def</span> <span class="pl-en">deps</span> <span class="pl-k">do</span>
-  [{<span class="pl-c1">:cachex</span>, <span class="pl-s"><span class="pl-pds">"</span>~&gt; 1.0.0<span class="pl-pds">"</span></span>}]
+  [{<span class="pl-c1">:cachex</span>, <span class="pl-s"><span class="pl-pds">"</span>~&gt; 1.2.0<span class="pl-pds">"</span></span>}]
 <span class="pl-k">end</span></pre></div>
 </li>
 <li>
@@ -128,13 +128,13 @@
 
 <div class="highlight highlight-source-elixir"><pre><span class="pl-c1">Supervisor</span>.start_link(
   [
-    worker(<span class="pl-c1">Cachex</span>, [[ <span class="pl-c1">name:</span> <span class="pl-c1">:my_cache</span> ], []])
+    worker(<span class="pl-c1">Cachex</span>, [<span class="pl-c1">:my_cache</span>, []])
   ]
 )</pre></div>
 
 <p>If you wish to start it manually (for example, in <code>iex</code>), you can just use <code>Cachex.start_link/2</code>:</p>
 
-<div class="highlight highlight-source-elixir"><pre><span class="pl-c1">Cachex</span>.start_link([ <span class="pl-c1">name:</span> <span class="pl-c1">:my_cache</span> ], [])</pre></div>
+<div class="highlight highlight-source-elixir"><pre><span class="pl-c1">Cachex</span>.start_link(<span class="pl-c1">:my_cache</span>, [])</pre></div>
 
 <p>Although this is possible and is functionally the same internally, it's probably better to set up the supervision tree for fault-tolerance. As shown in the above examples, the only <strong>required</strong> option is the <code>name</code> option. This is the name of your cache and is how you will typically refer to the cache in the <code>Cachex</code> module.</p>
 
@@ -253,10 +253,11 @@ iex(<span class="pl-c1">4</span>)<span class="pl-k">&gt;</span> <span class="pl-
 { <span class="pl-c1">:ok</span>, db } <span class="pl-k">=</span> initialize_database_client()
 
 <span class="pl-c"># initialize the cache instance</span>
-{ <span class="pl-c1">:ok</span>, pid } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.start_link([ <span class="pl-c1">name:</span> <span class="pl-c1">:info_cache</span>, <span class="pl-c1">default_ttl:</span> <span class="pl-c1">:timer</span>.minutes(<span class="pl-c1">5</span>), <span class="pl-c1">fallback_args:</span> [db] ])
+{ <span class="pl-c1">:ok</span>, pid } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.start_link(<span class="pl-c1">:info_cache</span>, [ <span class="pl-c1">default_ttl:</span> <span class="pl-c1">:timer</span>.minutes(<span class="pl-c1">5</span>), <span class="pl-c1">fallback_args:</span> [db] ])
 
 <span class="pl-c"># request our information on our "packages" API</span>
-{ <span class="pl-c1">:ok</span>, information } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get(<span class="pl-c1">:info_cache</span>, <span class="pl-s"><span class="pl-pds">"</span>/api/v1/packages<span class="pl-pds">"</span></span>, <span class="pl-c1">fallback:</span> <span class="pl-k">fn</span>(<span class="pl-smi">key</span>, <span class="pl-smi">db</span>) <span class="pl-k">-</span><span class="pl-k">&gt;</span>
+<span class="pl-c"># status will equal :loaded if the database was hit, otherwise :ok when successful</span>
+{ status, information } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get(<span class="pl-c1">:info_cache</span>, <span class="pl-s"><span class="pl-pds">"</span>/api/v1/packages<span class="pl-pds">"</span></span>, <span class="pl-c1">fallback:</span> <span class="pl-k">fn</span>(<span class="pl-smi">key</span>, <span class="pl-smi">db</span>) <span class="pl-k">-</span><span class="pl-k">&gt;</span>
   <span class="pl-c1">Database</span>.query_all_packages(db)
 <span class="pl-k">end</span>)</pre></div>
 
@@ -341,7 +342,7 @@ iex(<span class="pl-c1">4</span>)<span class="pl-k">&gt;</span> <span class="pl-
 <h4>
 <a id="registration" class="anchor" href="#registration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Registration</h4>
 
-<p>To register hooks with Cachex, they must be passed in when setting up a cache in the call to <code>Cachex.start_link/2</code> (or in your Supervisor). This looks something like the following:</p>
+<p>To register hooks with Cachex, they must be passed in when setting up a cache in the call to <code>Cachex.start_link/3</code> (or in your Supervisor). This looks something like the following:</p>
 
 <div class="highlight highlight-source-elixir"><pre><span class="pl-k">defmodule</span> <span class="pl-en">MyModule</span> <span class="pl-k">do</span>
 
@@ -352,7 +353,7 @@ iex(<span class="pl-c1">4</span>)<span class="pl-k">&gt;</span> <span class="pl-
       <span class="pl-c1">module:</span> <span class="pl-c1">MyProject</span>.<span class="pl-c1">MyHook</span>,
       <span class="pl-c1">server_args:</span> [ <span class="pl-c1">name:</span> <span class="pl-c1">:my_project_hook</span> ]
     }]
-    { <span class="pl-c1">:ok</span>, pid } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.start_link([ <span class="pl-c1">name:</span> <span class="pl-c1">:my_cache</span>, <span class="pl-c1">hooks:</span> my_hooks ])
+    { <span class="pl-c1">:ok</span>, pid } <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.start_link(<span class="pl-c1">:my_cache</span>, [ <span class="pl-c1">hooks:</span> my_hooks ])
     <span class="pl-c1">:ok</span>
   <span class="pl-k">end</span>
 
@@ -476,7 +477,7 @@ iex(<span class="pl-c1">4</span>)<span class="pl-k">&gt;</span> <span class="pl-
   <span class="pl-c1">type:</span> <span class="pl-c1">:post</span>,
   <span class="pl-c1">provide:</span> [ <span class="pl-c1">:worker</span> ]
 }
-<span class="pl-c1">Cachex</span>.start_link([ <span class="pl-c1">name:</span> <span class="pl-c1">:my_cache</span>, <span class="pl-c1">hooks:</span> hook ])</pre></div>
+<span class="pl-c1">Cachex</span>.start_link(<span class="pl-c1">:my_cache</span>, [ <span class="pl-c1">hooks:</span> hook ])</pre></div>
 
 <p>The message you receive in <code>handle_info/2</code> will always be <code>{ :provision, { provide_option, value } }</code> where <code>provide_option</code> is equal to the atom you've asked for (in this case <code>:worker</code>). Be aware that this modification event may be fired multiple times if the internal worker structure has changed for any reason (for example when extra nodes are added to the cluster).</p>
 
@@ -539,7 +540,7 @@ arbitrary keys this is probably not what you want.</p>
 <h4>
 <a id="execution-blocks" class="anchor" href="#execution-blocks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Execution Blocks</h4>
 
-<p>Execution Blocks were introduced to simply avoid the cost of passing messages back and forth when it could be done in one step. For example, rather than:</p>
+<p>Execution Blocks were introduced to simply avoid the cost of passing state back and forth when it could be done in one step. For example, rather than:</p>
 
 <div class="highlight highlight-source-elixir"><pre>val1 <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get!(<span class="pl-c1">:my_cache</span>, <span class="pl-s"><span class="pl-pds">"</span>key1<span class="pl-pds">"</span></span>)
 val2 <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get!(<span class="pl-c1">:my_cache</span>, <span class="pl-s"><span class="pl-pds">"</span>key2<span class="pl-pds">"</span></span>)</pre></div>
@@ -552,11 +553,9 @@ val2 <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get!(<span cl
   { v1, v2 }
 <span class="pl-k">end</span>)</pre></div>
 
-<p>Although this looks more complicated, it saves you a round trip of message passing, which actually trims off ~50% of the time it takes to retrieve both of your values (in theory).</p>
+<p>Although this looks more complicated it saves you a read of the internal Cachex state, which actually trims off a large amount of the overhead of a Cachex request.</p>
 
-<p>It should be noted that the consistency of these actions depends on which type of cache you're working with. In a local cache, all actions go via a single <code>GenServer</code>. This has the nice effect of ensuring that an execution block is consistent and nothing can interrupt your actions - for example, a <code>set</code> followed by a <code>get</code> is guaranteed to return the value just written.</p>
-
-<p>This is <strong>not</strong> the case when working with remote nodes, because other nodes might carry out actions. This is very important to keep in mind, and if this poses an issue, you might wish to move to <a href="#transaction-blocks">Transaction Blocks</a> instead.</p>
+<p>It should be noted that the consistency of these actions should not be relied upon. Even though you execute in a single block, you may still have cache actions occur between your calls inside the block. This is very important to keep in mind, and if this poses an issue, you might wish to move to <a href="#transaction-blocks">Transaction Blocks</a> instead.</p>
 
 <p>In addition, all actions taken inside an execution block are committed immediately. This means that there is no way to abort your block. Again, if this is a requirement please take a look at <a href="#transaction-blocks">Transaction Blocks</a>.</p>
 
@@ -589,9 +588,7 @@ val2 <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get!(<span cl
 <h4>
 <a id="things-to-remember" class="anchor" href="#things-to-remember" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Things To Remember</h4>
 
-<p>Hopefully you've noticed that in all examples above, we receive a <code>worker</code> argument in our blocks. You <strong>must</strong> pass this to your <code>Cachex</code> calls, rather than the cache name. This is because your blocks are executed inside the cache process.</p>
-
-<p>Calling with a cache name means that your actions will be sent to the worker process. Sadly, because you're waiting on the result of an action which executes after your block, your actions will just time out. Changes to Cachex in <code>v0.9.0</code> allow you to pass the <code>worker</code> argument to the interface to safely avoid this issue.</p>
+<p>Hopefully you've noticed that in all examples above, we receive a <code>worker</code> argument in our blocks. You <strong>must</strong> pass this to your <code>Cachex</code> calls, rather than the cache name. If you use the cache name inside your block, you lose all benefits of the block execution. Changes to Cachex in <code>v0.9.0</code> allow you to pass the <code>worker</code> argument to the interface to safely avoid this issue.</p>
 
 <h2>
 <a id="contributions" class="anchor" href="#contributions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributions</h2>
@@ -600,9 +597,12 @@ val2 <span class="pl-k">=</span> <span class="pl-c1">Cachex</span>.get!(<span cl
 
 <p>If you <em>do</em> make changes to the codebase, please make sure you test your changes thoroughly, and include any unit tests alongside new or changed behaviours. Cachex currently uses the excellent <a href="https://github.com/parroty/excoveralls">excoveralls</a> to track code coverage.</p>
 
-<div class="highlight highlight-source-elixir"><pre>$ mix cachex.test
-$ mix cachex.coveralls
-$ mix cachex.coveralls.html <span class="pl-k">&amp;&amp;</span> open cover<span class="pl-k">/</span>excoveralls.html</pre></div>
+<div class="highlight highlight-source-shell"><pre>$ mix cachex <span class="pl-c1">test</span>
+$ mix cachex credo
+$ mix cachex coveralls
+$ mix cachex coveralls.html <span class="pl-k">&amp;&amp;</span> open cover/excoveralls.html</pre></div>
+
+<p>Note that any test-related tasks should be executed under the <code>cachex</code> task in order to gain the required context. The first argument is the name of the task to run, and any arguments afterwards are passed as they appear.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/zackehh/cachex">Cachex</a> is maintained by <a href="https://github.com/zackehh">zackehh</a>.</span>
